update the status

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
 project(vischio)
 
 add_subdirectory(vischio)
-# add_subdirectory(tests)
+add_subdirectory(tests)
 add_subdirectory(demo)
