use catch with cmake for unittesting

--- a/src/demo/CMakeLists.txt
+++ b/src/demo/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
 
+add_compile_options(-std=c++17)
+
 add_library(cmdargs INTERFACE)
 target_include_directories(cmdargs INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}/../third-party/cmdargs
@@ -10,14 +12,12 @@ add_executable(vischio
 )
 
 target_link_libraries(vischio
-    vischio::lib
     cmdargs
+    vischio::lib
 )
 
 if (NOT ${MVSC})
     target_compile_options(vischio
-        PUBLIC
-        -std=c++17
         PRIVATE
         -pendatic
         -Wall
